commmit changes to code structure 11.08.2021

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+backend/FlaskRestApi/labels_rest_api/api_constants.py
+backend/FlaskRestApi/sample/api_constants.py
