--- a/frontend/aws-rekognition-photo-album/package.json
+++ b/frontend/aws-rekognition-photo-album/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
     "angular-alert-module": "^2.0.3",
+    "aws-sdk": "^2.975.0",
     "bootstrap": "^5.0.2",
+    "dotenv": "^10.0.0",
     "ng2-bootstrap": "^1.6.3",
+    "promise-polyfill": "8.2.0",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.2.0",
