--- a/frontend/aws-rekognition-photo-album/package.json
+++ b/frontend/aws-rekognition-photo-album/package.json
@@ -24,6 +24,7 @@
     "aws-sdk": "^2.975.0",
     "bootstrap": "^5.0.2",
     "dotenv": "^10.0.0",
+    "ng-uikit-pro-standard": "^1.0.0",
     "ng2-bootstrap": "^1.6.3",
     "promise-polyfill": "8.2.0",
     "rxjs": "~6.6.0",
