--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,5 @@ backend/FlaskRestApi/sample/mongo_constants.py
 backend/DOCS/new_user_credentials.txt
 backend/FlaskRestApi/labels_rest_api/callToAws/aws_constants.py
 frontend/aws-rekognition-photo-album/src/environments/environment.ts
+backend/FlaskRestApi/labels_rest_api/aws_constants.py
+backend/FlaskRestApi/labels_rest_api/mongo_constants.py
