--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,11 +12,11 @@
       "console": "integratedTerminal"
     },
     {
-      "type": "pwa-chrome",
+      "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome against localhost",
-      "url": "http://localhost:8080",
-      "webRoot": "${workspaceFolder}"
+      "url": "http://localhost:4200",
+      "webRoot": "D:/Github/AWSRekognitionPhotoAlbum/frontend/aws-rekognition-photo-album/" //${workspaceFolder}"
     }
   ]
 }
