--- a/frontend/aws-rekognition-photo-album/package.json
+++ b/frontend/aws-rekognition-photo-album/package.json
@@ -26,10 +26,12 @@
     "dotenv": "^10.0.0",
     "ng-uikit-pro-standard": "^1.0.0",
     "ng2-bootstrap": "^1.6.3",
+    "path": "^0.12.7",
     "promise-polyfill": "8.2.0",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.2.0",
+    "tspath": "^1.3.7",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -37,7 +39,7 @@
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.27",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
