--- a/frontend/aws-rekognition-photo-album/package.json
+++ b/frontend/aws-rekognition-photo-album/package.json
@@ -32,6 +32,7 @@
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.2.0",
     "tspath": "^1.3.7",
+    "typescript-string-operations": "^1.4.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
