--- a/frontend/aws-rekognition-photo-album/tsconfig.json
+++ b/frontend/aws-rekognition-photo-album/tsconfig.json
@@ -15,7 +15,7 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
-    "lib": ["es2018", "dom"],
+    "lib": ["es2018", "ESNext.String", "dom"],
     "types": ["node"]
   },
   "angularCompilerOptions": {
