--- a/frontend/aws-rekognition-photo-album/package.json
+++ b/frontend/aws-rekognition-photo-album/package.json
@@ -23,7 +23,9 @@
     "angular-alert-module": "^2.0.3",
     "aws-sdk": "^2.975.0",
     "bootstrap": "^5.0.2",
+    "bson-objectid": "^2.0.1",
     "dotenv": "^10.0.0",
+    "mongoose": "^6.0.10",
     "ng-uikit-pro-standard": "^1.0.0",
     "ng2-bootstrap": "^1.6.3",
     "path": "^0.12.7",
