--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ backend/FlaskRestApi/labels_rest_api/client_secret.json
 backend/FlaskRestApi/aws_constants.py
 backend/FlaskRestApi/mongo_constants.py
 backend/FlaskRestApi/client_secret.json
+frontend/aws-rekognition-photo-album/src/environments/environment.ts
