--- a/frontend/aws-rekognition-photo-album/package.json
+++ b/frontend/aws-rekognition-photo-album/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
     "angular-alert-module": "^2.0.3",
+    "angularx-social-login": "^4.0.1",
     "aws-sdk": "^2.975.0",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.3",
     "bson-objectid": "^2.0.1",
     "dotenv": "^10.0.0",
     "mongoose": "^4.4.8",
