--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,12 @@
       "console": "integratedTerminal"
     },
     {
+      "type": "edge",
+      "request": "launch",
+      "name": "Launch Edge against localhost",
+      "url": "http://localhost:4200"
+    },
+    {
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome against localhost",
